Fixtures API with swagger
