# storage/api-docs/api-docs.json
@@ -9,6 +9,56 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/fixture": {
+            "get": {
+                "tags": [
+                    "Fixture"
+                ],
+                "operationId": "/api/fixture",
+                "parameters": [
+                    {
+                        "name": "team_id",
+                        "in": "query",
+                        "description": "team_id",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "type_status",
+                        "in": "query",
+                        "description": "match status",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "upcoming",
+                                "past_matches"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: Bad request.",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/player/{id}": {
             "get": {
                 "tags": [
